solutions/spring-greeting/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spring-greeting
  labels:
    app: greeting-api
spec:
  containers:
  - name: spring-greeting
    image: agarwalconsulting/spring-greeting
    ports:
    - containerPort: 8080

---

apiVersion: v1
kind: Pod
metadata:
  name: spring-greeting-2
  labels:
    app: greeting-api
spec:
  containers:
  - name: spring-greeting
    image: agarwalconsulting/spring-greeting
    ports:
    - containerPort: 8080
