solutions/spring-greeting/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-service
spec:
  ports:
  - port: 3000
    targetPort: 8080
  selector:
    app: greeting-api
  type: NodePort
